<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="45sp"
        app:fontFamily="@font/roboto_regular"
        app:layout_constraintEnd_toEndOf="@+id/app_description"
        app:layout_constraintStart_toStartOf="@+id/app_description"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/app_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_description"
        android:textAlignment="center"
        android:textSize="20sp"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintWidth_max="320dp"
        app:layout_constraintWidth_min="280dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:minHeight="48dp"
        android:text="@string/login_description"
        android:textSize="14sp"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_description"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintWidth_max="320dp"
        app:layout_constraintWidth_min="280dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/register_description"
        android:textSize="14sp"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintWidth_max="320dp"
        app:layout_constraintWidth_min="280dp" />

</androidx.constraintlayout.widget.ConstraintLayout>