<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="24dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_name_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_item"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintWidth_max="320dp"
        app:layout_constraintWidth_min="280dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_name_field"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="14sp"
            app:fontFamily="@font/lato_regular" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_to_shopping_list_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_item" />

    </LinearLayout>
</LinearLayout>
