<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/forgot_password_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textSize="45sp"
        app:fontFamily="@font/roboto_regular"
        app:layout_constraintEnd_toEndOf="@+id/forgot_password_description"
        app:layout_constraintStart_toStartOf="@+id/forgot_password_description"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/forgot_password_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:text="@string/forgot_password_description"
        android:textAlignment="center"
        android:textSize="20sp"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_description"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintWidth_max="320dp"
        app:layout_constraintWidth_min="280dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            app:fontFamily="@font/lato_regular" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset_password_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"
        android:text="@string/send"
        android:textSize="14sp"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintEnd_toEndOf="@+id/email_layout"
        app:layout_constraintStart_toStartOf="@+id/email_layout"
        app:layout_constraintTop_toBottomOf="@id/email_layout" />

    <ProgressBar
        android:id="@+id/forgot_password_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_password_button" />

</androidx.constraintlayout.widget.ConstraintLayout>