<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/registerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:minHeight="48dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="30sp"
        app:fontFamily="@font/roboto_regular"
        app:layout_constraintBottom_toTopOf="@+id/firstNameField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/firstNameField"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/first_name"
        android:minHeight="48dp"
        android:textSize="14sp"
        android:inputType="textAutoComplete"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintBottom_toTopOf="@+id/emailField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailField"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textSize="14sp"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintBottom_toTopOf="@+id/passwordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordField"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textSize="14sp"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:text="@string/register"
        android:textSize="14sp"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:layout_marginBottom="224dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/registerProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>